shorter way to convert stream to a list